--- a/DarkNeon.theme.css
+++ b/DarkNeon.theme.css
@@ -30,7 +30,7 @@
 
   --transition-time: .1s; /* How fast animations added by the theme happen. Default is 0.3 seconds */
 
-  --background-image: unset; /* To add an image, replace unset with url(https://www.YOUR-URL-HERE.com) */
+  --background-image: url(https://supercarblondie.com/wp-content/uploads/SR-71-sunset.jpg); /* To add an image, replace unset with url(https://www.YOUR-URL-HERE.com) */
   --background-position: center; /* Positions the background image */
   --background-size: cover; /* Scales the background image */
   --background-blur: 5px; /* Blurs the image which helps with readability of text infront of it */
