--- a/src/_usertags.scss
+++ b/src/_usertags.scss
@@ -4,7 +4,7 @@
   &::after {
     content: ' Dev';
     display: inline-block;
-    background-image: url("https://www.google.com/url?sa=i&url=https%3A%2F%2Fcommons.wikimedia.org%2Fwiki%2FFile%3ASolid_black.svg&psig=AOvVaw0oomlJvt12zNnf2ntibYM6&ust=1693864732967000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCMC_-P63j4EDFQAAAAAdAAAAABAE");
+    background-image: url("https://commandcrafterhd.github.io/DiscordDarkNeon/svg/crayon.svg");
     background-size: 12px 12px;
     background-position: 3px;
     background-repeat: no-repeat;
