--- a/DarkNeon.theme.css
+++ b/DarkNeon.theme.css
@@ -11,10 +11,10 @@
  * @invite 6qd3SkP6Ch
 */
 
-@import url('https://commandcrafterhd.github.io/DiscordDarkNeon/mainRewrite.css');
+@import url('https://B4T3S.github.io/DiscordDarkNeon/mainRewrite.css');
 /* ^ This is the main Import ^ DO NOT TOUCH. Without this, the theme won't load!!! */
 
-@import url('https://commandcrafterhd.github.io/DiscordDarkNeon/css/hideUsers.css');
+@import url('https://B4T3S.github.io/DiscordDarkNeon/css/hideUsers.css');
 /* This import adds the collapsible user-list. Remove it/comment it out to disable that feature */
 
 /* CUSTOMIZE COLORS IN HERE! */
