--- a/DarkNeon.theme.css
+++ b/DarkNeon.theme.css
@@ -30,7 +30,7 @@
 
   --transition-time: .1s; /* How fast animations added by the theme happen. Default is 0.3 seconds */
 
-  --background-image: url(https://external-preview.redd.it/ipSPbCuUwCbVM5nfI_v7IHcWUzvnrH8NMuiXG4N1pcg.jpg?auto=webp&s=b4e1d9366510a0b331221dd6e3a9124b3167dcdd); /* To add an image, replace unset with url(https://www.YOUR-URL-HERE.com) */
+  --background-image: url(https://raw.githubusercontent.com/koorni04/DiscordDarkNeon/master/background_f22.jpg); /* To add an image, replace unset with url(https://www.YOUR-URL-HERE.com) */
   --background-position: center; /* Positions the background image */
   --background-size: cover; /* Scales the background image */
   --background-blur: 10px; /* Blurs the image which helps with readability of text infront of it */
